Fix bugs and remove pseudo
Bugs squashed:
	- Form submission wasn't validating.
	- checkDuplicates wasn't telling users why a book wouldn't submit.
	- removeBook always took from the top of the list, no matter what.
	- read-status-btn wasn't actually a button.

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ main>button,
 	text-align: end;
 }
 
-.card .read-status {
+.card .read-status-btn {
 	grid-row: 3;
 }
 
